// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deps skitch path skitch init 1`] = `
Array [
  "babel.config.js",
  "bootstrap-roles.sql",
  "docker-compose.yml",
  "jest.config.js",
  "lerna.json",
  "Makefile",
  "myproject",
  "package.json",
  "packages",
  "packages/install.sh",
  "readme.md",
  "skitch.json",
]
`;

exports[`deps skitch path skitch init 2`] = `
Array [
  ".editorconfig",
  ".eslintrc.js",
  ".gitattributes",
  ".gitignore",
  ".npmignore",
  ".travis.yml",
  ".vscode",
  ".yarnrc",
]
`;

exports[`deps skitch path sqitch init 1`] = `
Array [
  "deploy",
  "Makefile",
  "myproject.control",
  "package.json",
  "revert",
  "sqitch.conf",
  "sqitch.plan",
  "sql",
  "test",
  "test/first.gql.test.js",
  "test/first.sql.test.js",
  "test/utils",
  "test/utils/graphql.js",
  "test/utils/index.js",
  "verify",
]
`;

exports[`deps skitch path sqitch init 2`] = `
Array [
  ".babelrc",
  ".editorconfig",
  ".eslintignore",
  ".eslintrc.js",
  ".gitignore",
  ".npmignore",
  ".npmrc",
]
`;
